[gd_scene load_steps=2 format=3 uid="uid://turn_order_panel"]

[ext_resource type="Script" path="res://scripts/UI/turn_order_panel.gd" id="1_panel"]

[node name="TurnOrderPanel" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_right = 300.0
offset_bottom = 60.0
grow_horizontal = 2
mouse_filter = 2
script = ExtResource("1_panel")

[node name="PanelBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IconContainer" type="HBoxContainer" parent="PanelBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -20.0
offset_right = 200.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
theme_override_constants/separation = 4
